update music link

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
       el: "#app",
       data: {
         music: [
-          { src: "https://youtube.com/embed/LEbtlhpPrKc" },
+          { src: "https://youtube.com/embed/exSBmHzk7rU" },
           { src: "https://youtube.com/embed/V0cKVlCKARU" },
-          { src: "https://youtube.com/embed/k3vKDIJkVi8" },
+          { src: "https://youtube.com/embed/Gti7jIyjfRQ" },
         ],
         projects: {
           perso: [
